ajout du frontend de qlques pages recette et planning et fix du login et register